Added aproach + about for Push File

--- a/src/Portfolio.Web/src/templates/partials/pushfile/about.html
+++ b/src/Portfolio.Web/src/templates/partials/pushfile/about.html
@@ -1,1 +1,10 @@
-﻿<p>This is where the about section for Show Reminder goes.</p>
+﻿<p>
+    PushFile is an application to send files to an Android device through the use of Push Notifications.
+    The user can register thier phone and the use the web interface to send images, music, videos, and other files to thier phone.
+    The application on the phone will automatically download the files when it has an internet connection.
+</p>
+
+<p>
+    My use for the project was to synchronize music and movies to my tablet which was installed in my car.
+    It was difficult to remove the tablet from the car and connect to a computer, push notifications made it easy to remotely tell the tablet to download files.
+</p>
