--- a/src/Portfolio.Web/src/templates/partials/pushfile/approach.html
+++ b/src/Portfolio.Web/src/templates/partials/pushfile/approach.html
@@ -1,4 +1,18 @@
 ﻿<p>
-    This is the approach section for Show Reminder
+    Google exposes an API to send push notifications to all devices that have Google Play Services installed.
+    They do not allow you to attach files of arbitrary size to the notifications, my own service was needed to facilitate file download.
 </p>
 
+<p>
+    The andriod application registers itself with Google play services to receive push notifications and sends its registration ID to Push File.
+    When it receieves a notification, it checks to see if it has any files availble for download through a Rest API.
+</p>
+
+<p>
+    The web application utilizes Spring Framework for dependency injection, creating the RESTFul APi, serving web pagesusing Thymeleaf as a templating engine, and to provide security.
+    The web interface utilizes Knockout for templating and databinding, and Bootstrap 4 for styling.
+</p>
+
+<p>
+    The source code for the application can be found <a href="https://github.com/mwcaisse/AndroidFT" target="_blank">here</a>.
+</p>
