--- a/src/Portfolio.Web/src/pages/index.njk
+++ b/src/Portfolio.Web/src/pages/index.njk
@@ -193,8 +193,8 @@
             <h3>Contact</h3>
             
             <div class="row">
-                <div class="col">
-
+                <div id="contact-icon" class="col">
+                    <i class="fa fa-envelope"></i>
                 </div>
                 <div class="col">
                     <form id="formContact">
