Added Resume + Updated nav bar

--- a/src/Portfolio.Web/src/pages/index.njk
+++ b/src/Portfolio.Web/src/pages/index.njk
@@ -4,6 +4,9 @@
 
 <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
     <ul class="nav nav-pills float-right">
+        <li class="nav-item active">
+            <a class="nav-link" href="#">Home</a>
+        </li>
         <li class="nav-item">
             <a class="nav-link" href="#about">About</a>
         </li>
@@ -26,7 +29,7 @@
     <div class="name-content">
         <h1>Mitchell Caisse</h1>
         <h2>Software Engineer</h2>
-        <a class="btn-resume btn btn-outline-secondary" href="#">Download Resume</a>
+        <a class="btn-resume btn btn-outline-secondary" href="{{ contextRoot }}res/resume.pdf" target="_blank">Download Resume</a>
     </div>
 </div>
 
