--- a/src/Portfolio.Web/src/pages/project.njk
+++ b/src/Portfolio.Web/src/pages/project.njk
@@ -5,6 +5,9 @@
     <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
         <ul class="nav nav-pills float-right">
             <li class="nav-item">
+                <a class="nav-link" href="{{ contextRoot }}">Home</a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="{{ contextRoot }}#about">About</a>
             </li>
             <li class="nav-item">
@@ -13,7 +16,7 @@
             <li class="nav-item">
                 <a class="nav-link" href="{{ contextRoot }}#experience">Experience</a>
             </li>
-            <li class="nav-item">
+            <li class="nav-item active">
                 <a class="nav-link" href="{{ contextRoot }}#projects">Projects</a>
             </li>
             <li class="nav-item">
