Added active navbar highlighting

--- a/src/Portfolio.Web/src/pages/project.njk
+++ b/src/Portfolio.Web/src/pages/project.njk
@@ -16,8 +16,8 @@
             <li class="nav-item">
                 <a class="nav-link" href="{{ contextRoot }}#experience">Experience</a>
             </li>
-            <li class="nav-item active">
-                <a class="nav-link" href="{{ contextRoot }}#projects">Projects</a>
+            <li class="nav-item">
+                <a class="nav-link active" href="{{ contextRoot }}#projects">Projects</a>
             </li>
             <li class="nav-item">
                 <a class="nav-link" href="{{ contextRoot }}#contact">Contact</a>
