--- a/src/Portfolio.Web/src/css/styles.css
+++ b/src/Portfolio.Web/src/css/styles.css
@@ -6,6 +6,12 @@
         color: rgba(255, 255, 255, .75);
     }
 
+    .nav-link.active {
+        background-color: rgba(255, 255, 255, .5) !important
+    }
+
+
+
 .header {
     padding-top: 25px;
     padding-left: 50px;
