--- a/src/Portfolio.Web/src/pages/index.njk
+++ b/src/Portfolio.Web/src/pages/index.njk
@@ -4,8 +4,8 @@
 
 <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
     <ul class="nav nav-pills float-right">
-        <li class="nav-item active">
-            <a class="nav-link" href="#">Home</a>
+        <li class="nav-item">
+            <a class="nav-link active" href="#">Home</a>
         </li>
         <li class="nav-item">
             <a class="nav-link" href="#about">About</a>
