--- a/src/Portfolio.Web/src/css/styles.css
+++ b/src/Portfolio.Web/src/css/styles.css
@@ -7,7 +7,7 @@
     }
 
     .nav-link.active {
-        background-color: rgba(255, 255, 255, .5) !important
+        background-color: inherit !important
     }
 
 
