API Root is now pulled from HTML + set in build config

--- a/src/Portfolio.Web/src/templates/layout.njk
+++ b/src/Portfolio.Web/src/templates/layout.njk
@@ -13,6 +13,8 @@
 </head>
 
 <body>    
+    <input id="apiRoot" type="hidden"value="{{ apiRoot }}" />
+
     {% block content %}
     {% endblock %}
 
