Fixed various typos

--- a/src/Portfolio.Web/src/templates/partials/mwcaisse/approach.html
+++ b/src/Portfolio.Web/src/templates/partials/mwcaisse/approach.html
@@ -4,7 +4,7 @@
 </p>
 <p>
     The site consists of two template pages both backed by data stored in JSON format. 
-    This allows for adding simiarly formatted content without duplicating coding.
+    This allows for adding similarly formatted content without duplicating coding.
 </p>
 <p>The contact portion of the site is powered by a simple .NET Core Rest API. I used .NET Core for two reasons: I wanted to learn more about .NET Core and for the ease of setup and configuration.</p>
 <p>The source for the project can be found <a href="https://github.com/mwcaisse/portfolio" target="_blank">here</a>.</p>
