--- a/src/Portfolio.Web/src/templates/partials/pushfile/about.html
+++ b/src/Portfolio.Web/src/templates/partials/pushfile/about.html
@@ -1,6 +1,6 @@
 ﻿<p>
     PushFile is an application to send files to an Android device through the use of Push Notifications.
-    The user can register thier phone and the use the web interface to send images, music, videos, and other files to thier phone.
+    The user can register their phone and the use the web interface to send images, music, videos, and other files to their phone.
     The application on the phone will automatically download the files when it has an internet connection.
 </p>
 
