--- a/src/Portfolio.Web/src/templates/partials/pushfile/approach.html
+++ b/src/Portfolio.Web/src/templates/partials/pushfile/approach.html
@@ -4,13 +4,13 @@
 </p>
 
 <p>
-    The andriod application registers itself with Google play services to receive push notifications and sends its registration ID to Push File.
-    When it receieves a notification, it checks to see if it has any files availble for download through a Rest API.
+    The Android application registers itself with Google play services to receive push notifications and sends its registration ID to Push File.
+    When it receives a notification, it checks to see if it has any files available for download through a Rest API.
 </p>
 
 <p>
-    The web application utilizes Spring Framework for dependency injection, creating the RESTFul APi, serving web pagesusing Thymeleaf as a templating engine, and to provide security.
-    The web interface utilizes Knockout for templating and databinding, and Bootstrap 4 for styling.
+    The web application utilizes Spring Framework for dependency injection, creating the RESTFul API, serving web pages using Thymeleaf as a templating engine, and to provide security.
+    The web interface utilizes Knockout for templating and data binding, and Bootstrap 3 for styling.
 </p>
 
 <p>
