--- a/src/Portfolio.Web/src/templates/partials/showreminder/about.html
+++ b/src/Portfolio.Web/src/templates/partials/showreminder/about.html
@@ -1,4 +1,4 @@
 ﻿
-<p>Show Reminder is a web application to remind you when a TV Show is airing next or when it has last aired. The user can add shows to track and when visting the website the last + next air dates are shown. I always felt like I was forgetting to watch a certian episode of a show, this is the result. In the future it might have support for automatically sourcing a place to watch the episode.</p>
+<p>Show Reminder is a web application to remind you when a TV Show is airing next or when it has last aired. The user can add shows to track and when visiting the website the last + next air dates are shown. I always felt like I was forgetting to watch a certain episode of a show, this is the result. In the future it might have support for automatically sourcing a place to watch the episode.</p>
 
-<p>I wanted to learn Angular 2, Typescript, and .NET Core, this provided a great oppurtunity to learn both.</p>
+<p>I wanted to learn Angular 2, Typescript, and .NET Core, this provided a great opportunity to learn both.</p>
