--- a/src/Portfolio.Web/src/templates/partials/cartracker/approach.html
+++ b/src/Portfolio.Web/src/templates/partials/cartracker/approach.html
@@ -6,7 +6,7 @@
 
 <p>To keep things simple and allow easy code re-use between the Android application and Web app both were written in Java.</p>
 
-<p>The webapplication utilizes Spring Framework for hanlding dependency injection, the RESTFul API, serving WebPages using Thymeleaf as a templating engine, and to secure the application. MyBatis was used to provide a simple Data Access Layer between the application and its database.</p>
-<p>On the android side <a href="https://github.com/pires/obd-java-api" target="_blank">piers odb-java-api</a> is used to communicate with the vehicle. Spring RestTemplate is used to consume the RESTFul api exposed by the web application.</p>
+<p>The web application utilizes Spring Framework for handling dependency injection, the RESTFul API, serving web pages using Thymeleaf as a templating engine, and to secure the application. MyBatis was used to provide a simple Data Access Layer between the application and its database.</p>
+<p>On the android side <a href="https://github.com/pires/obd-java-api" target="_blank">piers obd-java-api</a> is used to communicate with the vehicle. Spring RestTemplate is used to consume the RESTFul API exposed by the web application.</p>
 
 <p>The source code for the application can be found <a href="https://github.com/mwcaisse/CarTracker" target="_blank">here</a>.</p>
