--- a/src/Portfolio.Web/src/templates/partials/showreminder/approach.html
+++ b/src/Portfolio.Web/src/templates/partials/showreminder/approach.html
@@ -1,5 +1,5 @@
-﻿<p>I needed a way to lookup and find show information, quickly present it to the user, and not constantly request data from show information source.
-    I decided upon using <a href="https://www.themoviedb.org/" target="_blank">The Movie Database</a> as a source for show information. Thier Web API was nicely documented, service is reliable, and contained all of the information I needed.</p>
+﻿<p>I needed a way to look up and find show information, quickly present it to the user, and not constantly request data from show information source.
+    I decided upon using <a href="https://www.themoviedb.org/" target="_blank">The Movie Database</a> as a source for show information. Their Web API was nicely documented, service is reliable, and contained all of the information I needed.</p>
 
 <p>The caching portion uses Entity Framework and a .NET Core Web API project to search and store show information from The Movie Database.</p>
 
