Fixed a few more typos

--- a/src/Portfolio.Web/src/pages/index.njk
+++ b/src/Portfolio.Web/src/pages/index.njk
@@ -96,7 +96,7 @@
         <div class="col skills-list">
             <h4>Misc</h4>
             <ul>
-                <li>Sharepoint</li>
+                <li>SharePoint</li>
                 <li>SSRS</li>
                 <li>Unix/Linux</li>
                 <li>Agile</li>
