Updated site to consistently user Software Developer

--- a/src/Portfolio.Web/src/pages/index.njk
+++ b/src/Portfolio.Web/src/pages/index.njk
@@ -28,7 +28,7 @@
 <div id="name" class="jumbotron">
     <div class="name-content">
         <h1>Mitchell Caisse</h1>
-        <h2>Software Engineer</h2>
+        <h2>Software Developer</h2>
         <a class="btn-resume btn btn-outline-secondary" href="{{ contextRoot }}res/resume.pdf" target="_blank">Download Resume</a>
     </div>
 </div>
