--- a/src/Portfolio.Web/src/templates/layout.njk
+++ b/src/Portfolio.Web/src/templates/layout.njk
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{{ contextRoot }}lib/font-awesome/css/font-awesome.min.css"/>
     <link rel="stylesheet" href="{{ contextRoot }}css/styles.css" />
 
-    <title>Mitchell Caisse - Software Engineer</title>
+    <title>Mitchell Caisse - Software Developer</title>
 </head>
 
 <body>    
