--- a/src/Portfolio.Web/src/css/styles.css
+++ b/src/Portfolio.Web/src/css/styles.css
@@ -11,6 +11,14 @@
     }
 
 
+a.nav-icon {
+    color: rgba(255, 255, 255, .5);
+}
+
+    a.nav-icon:hover {
+        color: rgba(255, 255, 255, .75);
+    }
+
 
 .header {
     padding-top: 25px;
