--- a/src/Portfolio.Web/src/pages/project.njk
+++ b/src/Portfolio.Web/src/pages/project.njk
@@ -2,64 +2,71 @@
 
 {% block content %}
 
-    <nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
-        <ul class="nav nav-pills float-right">
-            <li class="nav-item">
-                <a class="nav-link" href="{{ contextRoot }}">Home</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ contextRoot }}#about">About</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ contextRoot }}#skills">Technical Skills</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ contextRoot }}#experience">Experience</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link active" href="{{ contextRoot }}#projects">Projects</a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link" href="{{ contextRoot }}#contact">Contact</a>
-            </li>
-        </ul>
-    </nav>
+<nav class="navbar navbar-toggleable-md navbar-inverse bg-inverse">
+    <ul class="navbar-nav mr-auto">
+        <li class="nav-item">
+            <a class="nav-link" href="{{ contextRoot }}">Home</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ contextRoot }}#about">About</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ contextRoot }}#skills">Technical Skills</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ contextRoot }}#experience">Experience</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link active" href="{{ contextRoot }}#projects">Projects</a>
+        </li>
+        <li class="nav-item">
+            <a class="nav-link" href="{{ contextRoot }}#contact">Contact</a>
+        </li>
+    </ul>
+    <ul class="navbar-nav navbar-right">
+        <li>
+            <a class="nav-icon" href="https://github.com/mwcaisse" target="_blank">
+                <i class="fa fa-github fa-2x"></i>
+            </a>
+        </li>
+    </ul>
+</nav>
 
-    <div class="jumbotron">
-        <div class="project-name">
-            <h1>{{ name }}</h1>
-            <h2>{{ type }}</h2>
-        </div>
+<div class="jumbotron">
+    <div class="project-name">
+        <h1>{{ name }}</h1>
+        <h2>{{ type }}</h2>
     </div>
- 
-    <div class="container">
-        <div class="row">
-            <div class="col project-description">
-                <h3>About the Project</h3>
-                {%include about %}
+</div>
 
-                <h4>Related Skills</h4>
-                <p>{{ relatedSkills | join(", ") }}</p>
-            </div>
+<div class="container">
+    <div class="row">
+        <div class="col project-description">
+            <h3>About the Project</h3>
+            {%include about %}
 
-            <div class="col project-approach">
-                <h3>Project Approach</h3>
-                {%include approach %}
-            </div>
-
+            <h4>Related Skills</h4>
+            <p>{{ relatedSkills | join(", ") }}</p>
         </div>
-    </div>
 
-    <div class="container project-images">
-        <hr />
-        <h3>Result</h3>
-        <br/>
-
-        {% for image in images %}
-        <div class="row">
-            <img src="{{ contextRoot }}{{ image }}" />
+        <div class="col project-approach">
+            <h3>Project Approach</h3>
+            {%include approach %}
         </div>
-        {% endfor %}
+
     </div>
+</div>
+
+<div class="container project-images">
+    <hr />
+    <h3>Result</h3>
+    <br />
+
+    {% for image in images %}
+    <div class="row">
+        <img src="{{ contextRoot }}{{ image }}" />
+    </div>
+    {% endfor %}
+</div>
 
 {% endblock %}
