--- a/src/Portfolio.Web/src/pages/index.njk
+++ b/src/Portfolio.Web/src/pages/index.njk
@@ -98,6 +98,7 @@
                 <li>Angular 2</li>
                 <li>jQuery</li>
                 <li>Bootstrap</li>
+                <li>Vue.js</li>
             </ul>
         </div>
         <div class="col skills-list">
