Background image is jpg to save space

--- a/src/Portfolio.Web/src/css/styles.css
+++ b/src/Portfolio.Web/src/css/styles.css
@@ -28,7 +28,7 @@ a.nav-icon {
 
 #name {
     position: relative;
-    background-image: url('../img/background.png');
+    background-image: url('../img/background.jpg');
     height: 100vh;
     min-height: 500px;
     max-height: 1080px;
