--- a/src/Portfolio.Web/src/pages/index.njk
+++ b/src/Portfolio.Web/src/pages/index.njk
@@ -260,6 +260,6 @@
 
 {% block scripts %}
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="{{ contextRoot }}lib/knockout/knockout.js"></script>    
+    <script type="text/javascript" src="{{ contextRoot }}lib/knockout/knockout-latest.js"></script>    
     <script type="text/javascript" src="{{ contextRoot }}js/contactViewModel.js"></script>
 {% endblock %}
