Reverted back to old CDN for knockout/jquery

--- a/src/Portfolio.Web/src/pages/index.njk
+++ b/src/Portfolio.Web/src/pages/index.njk
@@ -259,7 +259,7 @@
 {% endblock %}
 
 {% block scripts %}
-    <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="{{ contextRoot }}lib/knockout/knockout-latest.js"></script>    
+    <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/jQuery/jquery-3.2.1.min.js"></script>
+    <script type="text/javascript" src="https://ajax.aspnetcdn.com/ajax/knockout/knockout-3.4.2.js"></script>    
     <script type="text/javascript" src="{{ contextRoot }}js/contactViewModel.js"></script>
 {% endblock %}
