--- a/src/Portfolio.Web/src/pages/index.njk
+++ b/src/Portfolio.Web/src/pages/index.njk
@@ -100,6 +100,8 @@
                 <li>jQuery</li>
                 <li>Bootstrap</li>
                 <li>Vue.js</li>
+				<li>Django</li>
+				<li>Django REST Framework</li>
             </ul>
         </div>
         <div class="col skills-list">
