--- a/src/Portfolio.Web/src/templates/layout.njk
+++ b/src/Portfolio.Web/src/templates/layout.njk
@@ -1,20 +1,20 @@
 ﻿<!DOCTYPE html>
 <html lang="en">
 <head>
-    
-    <meta charset="utf-8"/>
-    <meta name="viewport" context="width=device-width, initial-scale=1, shrink-to-fit=no"/>
-    
-    <link rel="stylesheet" href="{{ contextRoot }}lib/bootstrap/css/bootstrap.min.css"/>
-    <link rel="stylesheet" href="{{ contextRoot }}lib/font-awesome/css/font-awesome.min.css"/>
+
+    <meta charset="utf-8" />
+    <meta name="viewport" context="width=device-width, initial-scale=1, shrink-to-fit=no" />
+
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="{{ contextRoot }}lib/bulma/css/bulma.min.css" />
     <link rel="stylesheet" href="{{ contextRoot }}css/styles.css" />
 
     <script>
         (function (i, s, o, g, r, a, m) {
-        i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
-            (i[r].q = i[r].q || []).push(arguments)
-        }, i[r].l = 1 * new Date(); a = s.createElement(o),
-            m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
+            i['GoogleAnalyticsObject'] = r; i[r] = i[r] || function () {
+                (i[r].q = i[r].q || []).push(arguments)
+            }, i[r].l = 1 * new Date(); a = s.createElement(o),
+                m = s.getElementsByTagName(o)[0]; a.async = 1; a.src = g; m.parentNode.insertBefore(a, m)
         })(window, document, 'script', 'https://www.google-analytics.com/analytics.js', 'ga');
 
         ga('create', 'UA-104471628-1', 'auto');
