added some more logos

--- a/src/Portfolio.Web/src/pages/index.njk
+++ b/src/Portfolio.Web/src/pages/index.njk
@@ -162,7 +162,7 @@
             <div class="columns">
                 {% for skill in category.skills %}
                 <div class="column">
-                    <img src="{{contextRoot }}/img/{{skill.logo}}" style="width: 48px;" />             
+                    <img src="{{contextRoot }}/img/logos/{{skill.logo}}" style="width: 48px;" />             
                     <p>{{skill.title}}</p>
                 </div>
                 {% endfor %}
