--- a/src/Portfolio.Web/src/pages/index.njk
+++ b/src/Portfolio.Web/src/pages/index.njk
@@ -101,7 +101,7 @@
         <div class="card-content">
             <div class="columns is-vcentered is-centered is-multiline">
                 {% for skill in category.skills %}
-                <div class="column is-one-sixth is-one-fourth-mobile has-text-centered">
+                <div class="column is-one-sixth is-one-quarter-mobile has-text-centered">
                     <figure>
                         <img src="{{contextRoot }}/img/logos/{{skill.logo}}" style="width: 64px" />
                         <figcaption>{{skill.title}}</figcaption>
@@ -119,95 +119,87 @@
 <div class="container">
     <h3 class="title">
         Projects
-    </h3>     
-    <div class="row">
-
+    </h3>  
+    <div class="columns is-vcentered is-centered is-multiline">
         {% for project in projects %}
-
-            {% if loop.index0 % 3 === 0 %}
-            </div>
-            <div class="row">
-            {% endif %}
-
-            <div class="col-4">
-                <div class="card">
-                    <img class="card-img-top" src="{{ contextRoot }}{{ project.thumbnail }}" />
+        
+        <div class="column is-one-third has-text-centered">
+            <div class="card">
+                <div class="card-image">
+                    <figure class="image">
+                        <img src="{{ contextRoot }}{{ project.thumbnail }}" />
+                    </figure>
                 </div>
-                <a href="{{ contextRoot }}{{ project.link }}">
-                    <div class="project-info">
-                        <span class="project-text">
-                            <h3>{{ project.name }}</h3>
-                            <h5>{{ project.description }}</h5>
-                        </span>
+                <div class="card-content">
+                    <p class="title is-4">{{ project.name }}</p>
+                    <p>{{ project.description }}</p>
+                </div>
+            </div>
+        </div>
+
+        {% endfor %}
+    </div>
+</div>
+<!-- End of Projects Div-->
+
+<a id="contact" class="anchor"></a>
+<div id="contact" class="black-container">
+    <div class="container">
+        <h3 class="title">Contact</h3>
+            
+        <div class="row">
+            <div id="contact-icon" class="col">
+                <i class="fa fa-envelope"></i>
+            </div>
+            <div class="col">
+                <form id="formContact">
+                    <div class="form-group" data-bind="css: {'has-danger': $data.Name.ShowError}">
+                        <label for="inputName">Name</label>
+                        <input type="text" class="form-control" id="inputName" placeholder="Enter name"
+                                data-bind="textInput: $data.Name,
+                                    css: {'form-control-danger': $data.Name.ShowError}" />
+                        <div class="form-control-feedback"
+                                data-bind="text: $data.Name.ValidationMessage,
+                                visible: $data.Name.ShowError"></div>
                     </div>
-                </a>
+
+                    <div class="form-group" data-bind="css: {'has-danger': $data.Email.ShowError}">
+                        <label for="inputEmail">Email</label>
+                        <input type="text" class="form-control form-control-danger" id="inputEmail" placeholder="Enter email"
+                                data-bind="textInput: $data.Email, ,
+                                    css: {'form-control-danger': $data.Email.ShowError}" />
+                        <div class="form-control-feedback"
+                                data-bind="text: $data.Email.ValidationMessage,
+                                visible: $data.Email.ShowError"></div>
+                    </div>
+
+                    <div class="form-group" data-bind="css: {'has-danger': $data.Message.ShowError}">
+                        <label for="inputMessage">Message</label>
+                        <textarea class="form-control form-control-danger" id="inputMessage" rows="5"
+                                    data-bind="textInput: $data.Message,
+                                        css: {'form-control-danger': $data.Message.ShowError}"></textarea>
+                        <div class="form-control-feedback"
+                                data-bind="text: $data.Message.ValidationMessage,
+                                visible: $data.Message.ShowError"></div>
+                    </div>
+
+                    <button type="button" class="btn btn-primary" data-bind="click: $data.Send">Send</button>
+
+                    <div data-bind="with: $data.Alert" style="padding-top: 15px;">
+                        <div class="alert" data-bind="visible: $data.Show, css: $data.Type" style="display: none">
+                            <button type="button" class="close" data-bind="click: $data.Hide"><span aria-hidden="true">&times;</span></button>
+                            <strong data-bind="visible: $data.HasBoldText, text: $data.BoldText"></strong>&nbsp;<span data-bind="text: $data.Message">This is the alert message!</span>
+                        </div>
+                    </div>
+
+                </form>
             </div>
-
-            {% endfor %}
-
         </div>
-    
-    </div>
-    <!-- End of Projects Div-->
-
-    <a id="contact" class="anchor"></a>
-    <div id="contact" class="black-container">
-        <div class="container">
-            <h3 class="title">Contact</h3>
-            
-            <div class="row">
-                <div id="contact-icon" class="col">
-                    <i class="fa fa-envelope"></i>
-                </div>
-                <div class="col">
-                    <form id="formContact">
-                        <div class="form-group" data-bind="css: {'has-danger': $data.Name.ShowError}">
-                            <label for="inputName">Name</label>
-                            <input type="text" class="form-control" id="inputName" placeholder="Enter name"
-                                   data-bind="textInput: $data.Name,
-                                      css: {'form-control-danger': $data.Name.ShowError}" />
-                            <div class="form-control-feedback"
-                                 data-bind="text: $data.Name.ValidationMessage,
-                                    visible: $data.Name.ShowError"></div>
-                        </div>
-
-                        <div class="form-group" data-bind="css: {'has-danger': $data.Email.ShowError}">
-                            <label for="inputEmail">Email</label>
-                            <input type="text" class="form-control form-control-danger" id="inputEmail" placeholder="Enter email"
-                                   data-bind="textInput: $data.Email, ,
-                                      css: {'form-control-danger': $data.Email.ShowError}" />
-                            <div class="form-control-feedback"
-                                 data-bind="text: $data.Email.ValidationMessage,
-                                    visible: $data.Email.ShowError"></div>
-                        </div>
-
-                        <div class="form-group" data-bind="css: {'has-danger': $data.Message.ShowError}">
-                            <label for="inputMessage">Message</label>
-                            <textarea class="form-control form-control-danger" id="inputMessage" rows="5"
-                                      data-bind="textInput: $data.Message,
-                                         css: {'form-control-danger': $data.Message.ShowError}"></textarea>
-                            <div class="form-control-feedback"
-                                 data-bind="text: $data.Message.ValidationMessage,
-                                    visible: $data.Message.ShowError"></div>
-                        </div>
-
-                        <button type="button" class="btn btn-primary" data-bind="click: $data.Send">Send</button>
-
-                        <div data-bind="with: $data.Alert" style="padding-top: 15px;">
-                            <div class="alert" data-bind="visible: $data.Show, css: $data.Type" style="display: none">
-                                <button type="button" class="close" data-bind="click: $data.Hide"><span aria-hidden="true">&times;</span></button>
-                                <strong data-bind="visible: $data.HasBoldText, text: $data.BoldText"></strong>&nbsp;<span data-bind="text: $data.Message">This is the alert message!</span>
-                            </div>
-                        </div>
-
-                    </form>
-                </div>
-            </div>
 
             
 
-        </div>
     </div>
+</div>
 
 
 
