--- a/src/Portfolio.Web/src/pages/index.njk
+++ b/src/Portfolio.Web/src/pages/index.njk
@@ -123,7 +123,7 @@
     <div class="columns is-vcentered is-centered is-multiline">
         {% for project in projects %}
         
-        <div class="column is-one-third has-text-centered">
+        <div class="column is-one-third">
             <div class="card">
                 <div class="card-image">
                     <figure class="image">
