Fixed up github icons

--- a/src/Portfolio.Web/src/css/styles.css
+++ b/src/Portfolio.Web/src/css/styles.css
@@ -58,6 +58,14 @@
     }
 }
 
+i.icon, i.action-icon {
+    color: black;
+}
+
+    i.action-icon:hover {
+        color: #3273dc
+    }
+
 /* old styles */
 
 
