--- a/src/Portfolio.Web/src/templates/layout.njk
+++ b/src/Portfolio.Web/src/templates/layout.njk
@@ -5,8 +5,8 @@
     <meta charset="utf-8" />
     <meta name="viewport" context="width=device-width, initial-scale=1, shrink-to-fit=no" />
 
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.7.0/css/all.css" integrity="sha384-lZN37f5QGtY3VHgisS14W3ExzMWZxybE1SJSEsQp9S+oqd12jhcu+A56Ebc1zFSJ" crossorigin="anonymous">
     <link rel="stylesheet" href="{{ contextRoot }}lib/bulma/css/bulma.min.css" />
+    <link rel="stylesheet" href="{{ contextRoot }}lib/font-awesome/css/all.min.css" />
     <link rel="stylesheet" href="{{ contextRoot }}css/styles.css" />
 
     <script>
@@ -38,7 +38,7 @@
             <ul>
                 <li>
                     <a href="https://github.com/mwcaisse" target="_blank">
-                        <i class="fa fa-github fa-2x"></i>
+                        <i class="fab fa-github fa-2x action-icon"></i>
                     </a>
                 </li>
             </ul>
