--- a/src/Portfolio.Web/src/css/styles.css
+++ b/src/Portfolio.Web/src/css/styles.css
@@ -80,7 +80,7 @@ i.contact-icon {
 
 #name {
     position: relative;
-    background-image: url('../img/background.jpg');
+    background-image: url('../img/background2.jpg');
     height: 100vh;
     min-height: 500px;
     max-height: 1080px;
