--- a/src/Portfolio.Web/src/pages/index.njk
+++ b/src/Portfolio.Web/src/pages/index.njk
@@ -146,8 +146,8 @@
                 </div>
                 <div class="card-footer">
                     {% for github in project.github %}
-                    <a class="card-footer-item" href="{{ github }}">
-                        <i class="fab fa-github fa-2x action-icon"></i>
+                    <a class="card-footer-item project-github-link" href="{{ github }}">
+                        <i class="fab fa-github fa-2x"></i>
                     </a>
                     {% endfor %}
                 </div>
